# conanwithcmake

./: .gitignore
repo1/: CMakeLists.txt  Config.cmake.in  cc.sh  conanfile.py
repo1/include/: repo1.h
repo1/include/repo1/: repo1.h
repo1/src/: repo1.cpp
sdk/: CMakeLists.txt  conanfile.py
sdk/src/: main.cpp
